--- a/classiq_challenge.ipynb
+++ b/classiq_challenge.ipynb
@@ -173,6 +173,18 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 28,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "@QFunc\n",
+    "def sum_step(i: QParam[int], x:QNum, y: Output[QNum]):\n",
+    "    y |= 1 - 2 * (-1)**i * (-2*(1+i)*x)\n",
+    "    #y |= 1 - 2 * (-1)**i * np.e(-2*(1+i)*x)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
@@ -184,7 +196,10 @@
     "                 tanh_x: Output[QNum]       # The output of the function, which means it needs to be initialized within the scope of the function\n",
     "                 ):\n",
     "    \n",
-    "    pass #TODO delete pass and write your code here"
+    "    temp = 0\n",
+    "    i = 0\n",
+    "    while (precision - i):\n",
+    "        temp += 1 - 2 * (-1)**i * (-2*(1+i)*x)"
    ]
   },
   {
@@ -493,7 +508,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3.9.7 ('classiq_0_36_1')",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -507,9 +522,8 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.7"
+   "version": "3.9.6"
   },
-  "orig_nbformat": 4,
   "vscode": {
    "interpreter": {
     "hash": "39f2fb914d68d910e6a44db3a048977f45af665714e1ed570fe3896698105d3f"
@@ -517,5 +531,5 @@
   }
  },
  "nbformat": 4,
- "nbformat_minor": 2
+ "nbformat_minor": 4
 }
