add multiplication and exponetial operations

--- a/classiq_challenge.ipynb
+++ b/classiq_challenge.ipynb
@@ -140,7 +140,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -152,7 +152,10 @@
     "from classiq.interface.model.model import Model as Model_Designer\n",
     "\n",
     "import numpy as np\n",
-    "import json"
+    "import json\n",
+    "\n",
+    "from sympy import bernoulli, symbols\n",
+    "from math import factorial"
    ]
   },
   {
@@ -164,7 +167,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -173,7 +176,106 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 84,
+   "execution_count": 21,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0.46211715726000974\n",
+      "0.00416666666666667\n",
+      "0.504166666666667\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(np.tanh(.5))\n",
+    "n = 3\n",
+    "b = bernoulli(2*n)\n",
+    "term = ((2**(2*n))*((2**(2*n))-1)*b*(.5**((2*n)-1)))/(factorial(2*n))\n",
+    "print(term)\n",
+    "print(.5+term)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 41,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "-0.5\n"
+     ]
+    }
+   ],
+   "source": [
+    "b = symbols(\"b\")\n",
+    "b = float(bernoulli(2*n))\n",
+    "print(float(b))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 51,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "@QFunc\n",
+    "def compute_n_expansion(expand: Output[QNum],\n",
+    "                        precision: QParam[int],\n",
+    "                        x: QNum,\n",
+    "                        n: QParam[int],\n",
+    "):\n",
+    "    b = symbols(\"b\")\n",
+    "    b = float(bernoulli(2*n))\n",
+    "    # term_factor = ((2**(2*n))*((2**(2*n))-1)*b)/(factorial(2*n))\n",
+    "    # term = (x**((2*n)-1))\n",
+    "    reinterpret_num(is_signed=True, fraction_digits=precision, target=expand)\n",
+    "    term = ((2**(2*n))*((2**(2*n))-1)*b*(.5**((2*n)-1)))/(factorial(2*n))\n",
+    "    inplace_add(term, expand)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 74,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "@QFunc\n",
+    "def mult_x(x: Output[QNum],\n",
+    "           precision: QParam[int],\n",
+    "           n: QParam[int]\n",
+    "):\n",
+    "    tmp = QNum(\"tmp\")\n",
+    "    allocate_num(num_qubits=precision, is_signed=True, fraction_digits=precision, out=tmp)\n",
+    "    inplace_add(x, tmp)\n",
+    "    repeat(count=n, iteration=inplace_add(tmp, x))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 76,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "@QFunc\n",
+    "def exp_n(x: Output[QNum],\n",
+    "          precision: QParam[int],\n",
+    "          n: QParam[int]\n",
+    "):\n",
+    "    tmp = QNum(\"tmp\")\n",
+    "    allocate_num(num_qubits=precision, is_signed=True, fraction_digits=precision, out=tmp)\n",
+    "    inplace_add(x, tmp)\n",
+    "    repeat(count=n, iteration=mult_x(x, precision, tmp))\n",
+    "        "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 67,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -186,7 +288,7 @@
     "    allocate_num(num_qubits=precision, is_signed=False, fraction_digits=precision, out=tanh_x)\n",
     "    # initialize local variable expand as expansion term\n",
     "    expand = QNum(\"expand\")\n",
-    "    allocate_num(num_qubits=precision, is_signed=False, fraction_digits=precision, out=expand)\n",
+    "    allocate_num(num_qubits=precision, is_signed=True, fraction_digits=precision, out=expand)\n",
     "    for i in range(1): # Add conditional range here\n",
     "        inplace_add(x, expand)\n",
     "        # Add operations to expand function terms\n",
@@ -195,7 +297,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 85,
+   "execution_count": 65,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -205,7 +307,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 86,
+   "execution_count": 68,
    "metadata": {},
    "outputs": [],
    "source": [
