--- a/classiq_challenge.ipynb
+++ b/classiq_challenge.ipynb
@@ -219,28 +219,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "@QFunc\n",
-    "def compute_n_expansion(expand: Output[QNum],\n",
-    "                        precision: QParam[int],\n",
-    "                        x: QNum,\n",
-    "                        n: QParam[int],\n",
-    "):\n",
-    "    b = symbols(\"b\")\n",
-    "    b = float(bernoulli(2*n))\n",
-    "    # term_factor = ((2**(2*n))*((2**(2*n))-1)*b)/(factorial(2*n))\n",
-    "    # term = (x**((2*n)-1))\n",
-    "    reinterpret_num(is_signed=True, fraction_digits=precision, target=expand)\n",
-    "    term = ((2**(2*n))*((2**(2*n))-1)*b*(.5**((2*n)-1)))/(factorial(2*n))\n",
-    "    inplace_add(term, expand)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 74,
+   "execution_count": 161,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -251,13 +230,13 @@
     "):\n",
     "    tmp = QNum(\"tmp\")\n",
     "    allocate_num(num_qubits=precision, is_signed=True, fraction_digits=precision, out=tmp)\n",
-    "    inplace_add(x, tmp)\n",
-    "    repeat(count=n, iteration=inplace_add(tmp, x))"
+    "    # inplace_add(x, tmp)\n",
+    "    # repeat(n, lambda i: inplace_add(tmp, x))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 76,
+   "execution_count": 168,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -269,13 +248,36 @@
     "    tmp = QNum(\"tmp\")\n",
     "    allocate_num(num_qubits=precision, is_signed=True, fraction_digits=precision, out=tmp)\n",
     "    inplace_add(x, tmp)\n",
-    "    repeat(count=n, iteration=mult_x(x, precision, tmp))\n",
+    "    repeat(n, lambda i: mult_x(x, precision, tmp))\n",
     "        "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 163,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "@QFunc\n",
+    "def compute_n_expansion(expand: Output[QNum],\n",
+    "                        precision: QParam[int],\n",
+    "                        x: QNum,\n",
+    "                        n: QParam[int],\n",
+    "):\n",
+    "    mult_x(x, precision, n)\n",
+    "    inplace_add(x, expand)\n",
+    "    # b = symbols(\"b\")\n",
+    "    # b = float(bernoulli(2*n))\n",
+    "    # # term_factor = ((2**(2*n))*((2**(2*n))-1)*b)/(factorial(2*n))\n",
+    "    # # term = (x**((2*n)-1))\n",
+    "    # reinterpret_num(is_signed=True, fraction_digits=precision, target=expand)\n",
+    "    # term = ((2**(2*n))*((2**(2*n))-1)*b*(.5**((2*n)-1)))/(factorial(2*n))\n",
+    "    # inplace_add(term, expand)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 164,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -290,14 +292,15 @@
     "    expand = QNum(\"expand\")\n",
     "    allocate_num(num_qubits=precision, is_signed=True, fraction_digits=precision, out=expand)\n",
     "    for i in range(1): # Add conditional range here\n",
-    "        inplace_add(x, expand)\n",
+    "        # inplace_add(x, expand)\n",
     "        # Add operations to expand function terms\n",
+    "        mult_x(x, precision, precision)\n",
     "        inplace_add(expand, tanh_x)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 165,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -307,9 +310,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": 166,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "ValidationError",
+     "evalue": "1 validation error for Model\n__root__\n  Handle 'x' was errored with \"Trying to access handle 'x' as inout but it is in incorrect state\"\nIf you need further assistance, please reach out on our Community Slack channel at: https://short.classiq.io/join-slack\nIf the error persists feel free to open a ticket at: https://short.classiq.io/support (type=value_error.classiqvalue; _raw_message=Handle 'x' was errored with \"Trying to access handle 'x' as inout but it is in incorrect state\")",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mValidationError\u001b[0m                           Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[166], line 19\u001b[0m\n\u001b[0;32m     16\u001b[0m     compute_tanh(precision,x,y)\n\u001b[0;32m     18\u001b[0m \u001b[38;5;66;03m# Generating the model itslef\u001b[39;00m\n\u001b[1;32m---> 19\u001b[0m qmod \u001b[38;5;241m=\u001b[39m \u001b[43mcreate_model\u001b[49m\u001b[43m(\u001b[49m\u001b[43mmain\u001b[49m\u001b[43m)\u001b[49m\n",
+      "File \u001b[1;32mc:\\Users\\caleb\\Documents\\iQuHack\\iQuhack.conda\\Lib\\site-packages\\classiq\\qmod\\quantum_function.py:33\u001b[0m, in \u001b[0;36mcreate_model\u001b[1;34m(entry_point, constraints, execution_preferences, preferences)\u001b[0m\n\u001b[0;32m     27\u001b[0m \u001b[38;5;28;01mdef\u001b[39;00m \u001b[38;5;21mcreate_model\u001b[39m(\n\u001b[0;32m     28\u001b[0m     entry_point: \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mQFunc\u001b[39m\u001b[38;5;124m\"\u001b[39m,\n\u001b[0;32m     29\u001b[0m     constraints: Optional[Constraints] \u001b[38;5;241m=\u001b[39m \u001b[38;5;28;01mNone\u001b[39;00m,\n\u001b[0;32m     30\u001b[0m     execution_preferences: Optional[ExecutionPreferences] \u001b[38;5;241m=\u001b[39m \u001b[38;5;28;01mNone\u001b[39;00m,\n\u001b[0;32m     31\u001b[0m     preferences: Optional[Preferences] \u001b[38;5;241m=\u001b[39m \u001b[38;5;28;01mNone\u001b[39;00m,\n\u001b[0;32m     32\u001b[0m ) \u001b[38;5;241m-\u001b[39m\u001b[38;5;241m>\u001b[39m SerializedModel:\n\u001b[1;32m---> 33\u001b[0m     \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[43mentry_point\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mcreate_model\u001b[49m\u001b[43m(\u001b[49m\n\u001b[0;32m     34\u001b[0m \u001b[43m        \u001b[49m\u001b[43mconstraints\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mexecution_preferences\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mpreferences\u001b[49m\n\u001b[0;32m     35\u001b[0m \u001b[43m    \u001b[49m\u001b[43m)\u001b[49m\u001b[38;5;241m.\u001b[39mget_model()\n",
+      "File \u001b[1;32mc:\\Users\\caleb\\Documents\\iQuHack\\iQuhack.conda\\Lib\\site-packages\\classiq\\qmod\\quantum_function.py:69\u001b[0m, in \u001b[0;36mQFunc.create_model\u001b[1;34m(self, constraints, execution_preferences, preferences)\u001b[0m\n\u001b[0;32m     63\u001b[0m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39m_add_native_func_def()\n\u001b[0;32m     64\u001b[0m model_extra_settings: List[Tuple[\u001b[38;5;28mstr\u001b[39m, Any]] \u001b[38;5;241m=\u001b[39m [\n\u001b[0;32m     65\u001b[0m     (\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mconstraints\u001b[39m\u001b[38;5;124m\"\u001b[39m, constraints),\n\u001b[0;32m     66\u001b[0m     (\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mexecution_preferences\u001b[39m\u001b[38;5;124m\"\u001b[39m, execution_preferences),\n\u001b[0;32m     67\u001b[0m     (\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mpreferences\u001b[39m\u001b[38;5;124m\"\u001b[39m, preferences),\n\u001b[0;32m     68\u001b[0m ]\n\u001b[1;32m---> 69\u001b[0m \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[43mModel\u001b[49m\u001b[43m(\u001b[49m\n\u001b[0;32m     70\u001b[0m \u001b[43m    \u001b[49m\u001b[43mfunctions\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[38;5;28;43mlist\u001b[39;49m\u001b[43m(\u001b[49m\u001b[38;5;28;43mself\u001b[39;49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43m_qmodule\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mnative_defs\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mvalues\u001b[49m\u001b[43m(\u001b[49m\u001b[43m)\u001b[49m\u001b[43m)\u001b[49m\u001b[43m,\u001b[49m\n\u001b[0;32m     71\u001b[0m \u001b[43m    \u001b[49m\u001b[43mtypes\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[38;5;28;43mlist\u001b[39;49m\u001b[43m(\u001b[49m\u001b[38;5;28;43mself\u001b[39;49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43m_qmodule\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mtype_decls\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mvalues\u001b[49m\u001b[43m(\u001b[49m\u001b[43m)\u001b[49m\u001b[43m)\u001b[49m\u001b[43m,\u001b[49m\n\u001b[0;32m     72\u001b[0m \u001b[43m    \u001b[49m\u001b[38;5;241;43m*\u001b[39;49m\u001b[38;5;241;43m*\u001b[39;49m\u001b[43m{\u001b[49m\u001b[43mkey\u001b[49m\u001b[43m:\u001b[49m\u001b[43m \u001b[49m\u001b[43mvalue\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;28;43;01mfor\u001b[39;49;00m\u001b[43m \u001b[49m\u001b[43mkey\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mvalue\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;129;43;01min\u001b[39;49;00m\u001b[43m \u001b[49m\u001b[43mmodel_extra_settings\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;28;43;01mif\u001b[39;49;00m\u001b[43m \u001b[49m\u001b[43mvalue\u001b[49m\u001b[43m}\u001b[49m\u001b[43m,\u001b[49m\n\u001b[0;32m     73\u001b[0m \u001b[43m\u001b[49m\u001b[43m)\u001b[49m\n",
+      "File \u001b[1;32mc:\\Users\\caleb\\Documents\\iQuHack\\iQuhack.conda\\Lib\\site-packages\\pydantic\\main.py:341\u001b[0m, in \u001b[0;36mpydantic.main.BaseModel.__init__\u001b[1;34m()\u001b[0m\n",
+      "\u001b[1;31mValidationError\u001b[0m: 1 validation error for Model\n__root__\n  Handle 'x' was errored with \"Trying to access handle 'x' as inout but it is in incorrect state\"\nIf you need further assistance, please reach out on our Community Slack channel at: https://short.classiq.io/join-slack\nIf the error persists feel free to open a ticket at: https://short.classiq.io/support (type=value_error.classiqvalue; _raw_message=Handle 'x' was errored with \"Trying to access handle 'x' as inout but it is in incorrect state\")"
+     ]
+    }
+   ],
    "source": [
     "# Do not change this part of the code !\n",
     "\n",
