start of linear approzimation

--- a/classiq_challenge.ipynb
+++ b/classiq_challenge.ipynb
@@ -66,9 +66,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 815,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "c:\\Users\\caleb\\Documents\\iQuHack\\iQuhack.conda\\Lib\\site-packages\\classiq\\_internals\\authentication\\token_manager.py:82: UserWarning: Device is already registered.\n",
+      "Generating a new refresh token should only be done if the current refresh token is compromised.\n",
+      "To do so, set the overwrite parameter to true\n",
+      "  warnings.warn(\n"
+     ]
+    }
+   ],
    "source": [
     "import classiq\n",
     "classiq.authenticate()"
@@ -83,9 +94,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 816,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Opening: https://platform.classiq.io/circuit/8633155a-af2e-4115-9b49-cfcacb0ab8ca?version=0.36.1\n"
+     ]
+    }
+   ],
    "source": [
     "from classiq import *\n",
     "K =5\n",
@@ -140,7 +159,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 806,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -164,7 +183,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 807,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -173,7 +192,42 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 928,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "@QFunc\n",
+    "def linear_func(a:QParam[float],b: QParam[float], x:QNum, y: Output[QNum]):\n",
+    "        y |= a*x+b"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 929,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "@QFunc\n",
+    "def inplace_linear_attempt(a:QParam[float],b: QParam[float], x:QNum, y: QNum):\n",
+    "    tmp = QNum('tmp')\n",
+    "    linear_func(a,b,x,tmp)\n",
+    "    inplace_xor(tmp,y)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 948,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "@QFunc\n",
+    "def control_logic(a: QParam[list[float]], b: QParam[list[float]], controller:QNum, x: QNum, y: QNum):\n",
+    "    lambda i: quantum_if(controller==i, lambda: linear_func(a[i],b[i],x,y))\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 941,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -183,13 +237,23 @@
     "                 x: QNum,                   # A quantum variable that is represents numbers\n",
     "                 tanh_x: Output[QNum]       # The output of the function, which means it needs to be initialized within the scope of the function\n",
     "                 ):\n",
-    "    \n",
-    "    pass #TODO delete pass and write your code here"
+    "    a = [1, .51]\n",
+    "    b = [1, .26]\n",
+    "    y = QNum('y')\n",
+    "    allocate_num(num_qubits=precision, is_signed=False, fraction_digits=precision, out=y)\n",
+    "\n",
+    "    # Setting the controller in a superpostion\n",
+    "    controller = QNum(\"controller\")\n",
+    "    allocate_num(1,False,0,controller)\n",
+    "    H(controller)\n",
+    "    control_logic(a, b, controller, x, y)\n",
+    "    allocate_num(num_qubits=precision, is_signed=False, fraction_digits=precision, out=tanh_x)\n",
+    "    inplace_add(y, tanh_x)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 944,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -199,7 +263,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 945,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -222,6 +286,25 @@
     "\n",
     "# Generating the model itslef\n",
     "qmod = create_model(main)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 946,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Opening: https://platform.classiq.io/circuit/17eb2a8e-a511-40f1-852f-2747e89ee970?version=0.36.1\n"
+     ]
+    }
+   ],
+   "source": [
+    "qmod = set_constraints(qmod,Constraints(optimization_parameter='width'))\n",
+    "qprog = synthesize(qmod)\n",
+    "show(qprog)"
    ]
   },
   {
