1st order Chebyshev approximation

--- a/classiq_challenge.ipynb
+++ b/classiq_challenge.ipynb
@@ -66,7 +66,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 539,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -140,7 +140,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 219,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -164,43 +164,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 527,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "@QFunc\n",
-    "def piecewise_func(a:QParam[float], b:QParam[float], x:QNum, y:Output[QNum]):\n",
-    "    y |= x + 0.0001\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 528,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "@QFunc\n",
-    "def inplace_piecewise_func(a:QParam[float],b: QParam[float], x:QNum, y: QNum):\n",
-    "    tmp = QNum('tmp')\n",
-    "    within_apply(compute= lambda: piecewise_func(a,b,x,tmp),\n",
-    "                action= lambda: inplace_xor(tmp,y))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 529,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "@QFunc\n",
-    "def control_logic(a: QParam[list[float]], b: QParam[list[float]], controller:QNum, x: QNum, y: QNum):\n",
-    "    repeat(count=a.len(), iteration=lambda i: quantum_if(controller==i, lambda: inplace_piecewise_func(a[i],b[i],x,y)))\n",
-    "    "
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 530,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -210,37 +174,22 @@
     "                 tanh_x: Output[QNum]\n",
     "                 ):\n",
     "    \n",
-    "    allocate_num(num_qubits=precision,\n",
-    "                 is_signed=False,\n",
-    "                 fraction_digits=precision,\n",
-    "                 out=tanh_x)\n",
-    "    y = QNum('y')\n",
-    "    allocate_num(num_qubits=1, is_signed=False, fraction_digits=1, out=y)\n",
-    "\n",
-    "    controller = QNum('controller')\n",
-    "    allocate_num(2,False,0,controller)\n",
-    "    hadamard_transform(controller)\n",
-    "\n",
-    "    a = [1.0,0.9,0.7,0.5]\n",
-    "    b = [0.0,0.3,0.1,0.3]    \n",
-    "\n",
-    "    control_logic(a,b,controller,x,y)\n",
-    "    inplace_add(y, tanh_x)"
+    "    tanh_x |= 0.0029296875 + 0.875 * x"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 531,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Your precision value\n",
-    "precision = 4"
+    "precision = 4 "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 532,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -268,15 +217,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 533,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Synthesized circuit width: 24, depth: 114\n",
-      "Opening: https://platform.classiq.io/circuit/71ad586f-ca2c-4a6a-8bb2-b1480c144996?version=0.36.1\n"
+      "Synthesized circuit width: 14, depth: 48\n",
+      "Opening: https://platform.classiq.io/circuit/9447b571-33af-489a-82e4-f4284d0852ff?version=0.36.1\n"
      ]
     }
    ],
@@ -311,13 +260,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 534,
+   "execution_count": 62,
    "metadata": {},
    "outputs": [],
    "source": [
     "#Precision values stages 1&2 - You need to enter these values in Google Form submission\n",
-    "precision_value_stage_1 = 4 \n",
-    "precision_value_stage_2 = 7"
+    "precision_value_stage_1 = 4  \n",
+    "precision_value_stage_2 = 48 #49 #50 #52 #56 #48 #2**5 #7 "
    ]
   },
   {
@@ -329,7 +278,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 535,
+   "execution_count": 63,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -386,7 +335,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 536,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -408,7 +357,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 537,
+   "execution_count": 64,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -442,14 +391,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 499,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Opening: https://platform.classiq.io/circuit/6af7aa86-f919-435d-b88b-b99ae62f6768?version=0.36.1\n"
+      "Opening: https://platform.classiq.io/circuit/080a9ffa-ab63-4441-a467-cca1d755ec59?version=0.36.1\n"
      ]
     }
    ],
@@ -459,14 +408,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 500,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Opening: https://platform.classiq.io/circuit/108148db-bafe-4e83-8dae-d8cb780752e2?version=0.36.1\n"
+      "Opening: https://platform.classiq.io/circuit/0c89a424-d4c5-4468-9927-9a6f5d7f5221?version=0.36.1\n"
      ]
     }
    ],
@@ -494,7 +443,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 538,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
@@ -502,26 +451,26 @@
      "output_type": "stream",
      "text": [
       "Synthesizing quantum program stage 1 with the execution preferences\n",
-      "Synthesized circuit width: 28, depth: 111\n",
+      "Synthesized circuit width: 14, depth: 48\n",
       "Executing the quantum program\n",
-      "{'x': 0.0, 'y': 0.0}\n",
-      "{'x': 0.0625, 'y': 0.0}\n",
-      "{'x': 0.125, 'y': 0.0}\n",
-      "{'x': 0.1875, 'y': 0.0}\n",
-      "{'x': 0.25, 'y': 0.0}\n",
-      "{'x': 0.3125, 'y': 0.0}\n",
-      "{'x': 0.375, 'y': 0.0}\n",
-      "{'x': 0.4375, 'y': 0.0}\n",
-      "{'x': 0.5, 'y': 0.5}\n",
-      "{'x': 0.5625, 'y': 0.5}\n",
-      "{'x': 0.625, 'y': 0.5}\n",
-      "{'x': 0.6875, 'y': 0.5}\n",
-      "{'x': 0.75, 'y': 0.5}\n",
-      "{'x': 0.8125, 'y': 0.5}\n",
-      "{'x': 0.875, 'y': 0.5}\n",
-      "{'x': 0.9375, 'y': 0.5}\n",
+      "{'x': 0.0, 'y': 0.0029296875}\n",
+      "{'x': 0.0625, 'y': 0.0576171875}\n",
+      "{'x': 0.125, 'y': 0.1123046875}\n",
+      "{'x': 0.1875, 'y': 0.1669921875}\n",
+      "{'x': 0.25, 'y': 0.2216796875}\n",
+      "{'x': 0.3125, 'y': 0.2763671875}\n",
+      "{'x': 0.375, 'y': 0.3310546875}\n",
+      "{'x': 0.4375, 'y': 0.3857421875}\n",
+      "{'x': 0.5, 'y': 0.4404296875}\n",
+      "{'x': 0.5625, 'y': 0.4951171875}\n",
+      "{'x': 0.625, 'y': 0.5498046875}\n",
+      "{'x': 0.6875, 'y': 0.6044921875}\n",
+      "{'x': 0.75, 'y': 0.6591796875}\n",
+      "{'x': 0.8125, 'y': 0.7138671875}\n",
+      "{'x': 0.875, 'y': 0.7685546875}\n",
+      "{'x': 0.9375, 'y': 0.8232421875}\n",
       "Results of stage 1 \n",
-      " Max distance =  0.4613487953888654\n"
+      " Max distance =  0.08917066789565853\n"
      ]
     }
    ],
@@ -561,7 +510,7 @@
     "\n",
     "# Execution parameters\n",
     "num_shots = 1000\n",
-    "backend_name = \"nvidia_state_vector_simulator\" # \"aer_simulator\", \"nvidia_state_vector_simulator\"\n",
+    "backend_name = \"aer_simulator\" # \"aer_simulator\", \"nvidia_state_vector_simulator\"\n",
     "\n",
     "qmod_stage_1 = set_execution_preferences(qmod_stage_1, \n",
     "                                        ExecutionPreferences(\n",
@@ -585,7 +534,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 502,
+   "execution_count": 65,
    "metadata": {},
    "outputs": [
     {
@@ -594,7 +543,7 @@
      "text": [
       "\n",
       "Results of stage 2 \n",
-      "Precision = 7, Circuit depth = 258\n"
+      "Precision = 48, Circuit depth = 476\n"
      ]
     }
    ],
@@ -632,7 +581,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.6"
+   "version": "3.11.7"
   },
   "vscode": {
    "interpreter": {
